--- a/vizune-frontend/src/app/styles/globals.css
+++ b/vizune-frontend/src/app/styles/globals.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --background: #ffffff;
@@ -12,15 +14,9 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
+  background-color: #F8D1B2;
+  height: 100vh;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
